--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 .post {
-  width: 300px;
-  display: inline-block;
+  /*width: 300px;
+  display: inline-block;*/
+  margin-top: 5px;
+  margin-bottom: 5%;
 }
 
 .about-me {
